`Bugfix`: Remove double scrollbar in settings and enhance select component appearance (#2272)

--- a/src/main/webapp/app/shared/components/atoms/select/select.component.scss
+++ b/src/main/webapp/app/shared/components/atoms/select/select.component.scss
@@ -105,6 +105,7 @@
 
     &.p-select-option-selected {
       color: var(--p-text-primary);
+      font-weight: 500;
     }
   }
 }
